Updated navbar and fixed styling issues

--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,7 @@
         <button class="menu_btn" type="button" id="menu_btn">Menu</button>
         <ul class="mobile-menu" id="mobile_menu">
             <li class="mobile-item"><a class="mobile-link" href="index.html">HOME</a></li>
+            <li class="mobile-item"><a class="mobile-link" href="library.html">LIBRARY</a></li>
             <li class="mobile-item"><a class="mobile-link" href="about.html">ABOUT</a></li>
             <li class="mobile-item"><a class="mobile-link" href="contact.html">CONTACT</a></li>
             <li class="mobile-item"><a class="mobile-link" href="user.html">LOGIN</a></li>
