Updated navbar and fixed styling issues

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         });
     </script>
     <div class="footer">
-        <h3>COPYRIGHT &copy; 2025<br> BHAVITH KUMAR ALL <br> RIGHTS RESERVED</h3>
+        <h3>COPYRIGHT &copy; 2025<br> BHAVITH KUMAR <br> ALL RIGHTS RESERVED</h3>
     </div>
 </body>
 </html>
