Updated navbar and fixed styling issues

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         });
     </script>
     <div class="footer">
-        <h3>COPYRIGHT &copy; 2025<br> BHAVITH KUMAR <br> ALL RIGHTS RESERVED</h3>
+        <p>&copy; 2025 E-LIBRARY. ALL RIGHTS RESERVED.</p>
     </div>
 </body>
 </html>
