--- a/library.html
+++ b/library.html
@@ -661,7 +661,7 @@
         });
     </script>
     <div class="footer">
-        <h3>COPYRIGHT &copy; &nbsp;&nbsp; | &nbsp;&nbsp; 2025 BHAVITH KUMAR &nbsp;&nbsp;| &nbsp;&nbsp;  ALL RIGHTS RESERVED</h3>
+        <p>&copy; 2025 E-LIBRARY. ALL RIGHTS RESERVED.</p>
     </div>
 </body>
 </html>
