--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
     </div>
 
     <div class="footer">
-        <h3>COPYRIGHT &copy; 2025 BHAVITH KUMAR | ALL RIGHTS RESERVED</h3>
+        <p>&copy; 2025 E-LIBRARY. ALL RIGHTS RESERVED.</p>
     </div>
 
 </body>
