--- a/user.html
+++ b/user.html
@@ -153,7 +153,7 @@
     </div>
 
     <div class="footer">
-        <p>© 2025 E-LIBRARY. All Rights Reserved.</p>
+        <p>&copy; 2025 E-LIBRARY. ALL RIGHTS RESERVED.</p>
     </div>
 
     <script>
