Updated navbar and fixed styling issues

--- a/library.html
+++ b/library.html
@@ -633,7 +633,6 @@
         </div>
     </div>
 
-
     <script>
         // Display the Products based on the Department  
         document.getElementById("department").addEventListener('change',function(){
@@ -659,7 +658,7 @@
             document.querySelector(".section_heading").innerHTML=displayText;
             document.getElementById(dept).style.display="flex";
         });
-    </script>
+    </script><br><br><br><br>
     <div class="footer">
         <p>&copy; 2025 E-LIBRARY. ALL RIGHTS RESERVED.</p>
     </div>
